appId: jp.co.twise.twsnmpmv
---
- launchApp
- tapOn:
    point: "50%, 95%" # nav-add-btn approximate position
- tapOn: "サイト名"
- eraseText
- inputText: "TWSNMP FC"
- tapOn: "URL"
- inputText: "http://192.168.1.250:8080"
- tapOn: "ユーザー名"
- inputText: "twsnmp"
- tapOn: "パスワード"
- inputText: "twsnmp"
- tapOn:
    point: "70%, 55%" # save-site-btn approximate position inside modal
- assertVisible: "TWSNMP FC"
